--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@tanstack/react-query": "^5.90.12",
+    "@upstash/redis": "^1.35.8",
     "@vercel/kv": "^3.0.0",
     "next": "16.1.0",
     "react": "19.2.3",
